--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,25 @@
-# Ignore model artifacts and data inside stock_api
-stock_api/rf_model.joblib
-stock_api/scaler.joblib
-stock_api/label_encoder.joblib
-stock_api/cleaned_stock_data.csv
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+dist
+dist-ssr
+*.local
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+.DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+.env
